syntax = "proto3";

package grpc;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

/*
 * v1.0.0
 * protocol
 */
message Proto {
    int32 op = 1 [(gogoproto.jsontag) = "op"];
    bytes body = 2 [(gogoproto.jsontag) = "body"];
}

message Empty{}

message BroadcastReq{
    int32 protoOp = 1;
    Proto proto = 2;
    int32 speed = 3;
}

message BroadcastReply{}

message BroadcastRoomReq {
    string roomID = 1;
    Proto proto = 2;
}

message BroadcastRoomReply{}

message RoomsReq{}

message RoomsReply {
    option (gogoproto.goproto_stringer) = false;
    map<string,bool> rooms = 1;
}

service Comet { 
    // Ping Service 
    rpc Ping(Empty) returns(Empty); 
    // Close Service 
    rpc Close(Empty) returns(Empty);
    // Broadcast send to every enrity
    rpc Broadcast(BroadcastReq) returns (BroadcastReply);
    // BroadcastRoom broadcast to one room
    rpc BroadcastRoom(BroadcastRoomReq) returns (BroadcastRoomReply);
    // Rooms get all rooms
    rpc Rooms(RoomsReq) returns (RoomsReply);
}
